Minor adjustments for perf benchmarks
Signed-off-by: David Kral <david.k.kral@oracle.com>